<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:text="Отмена" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            tools:text="Удалить" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            tools:text="Ок" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            tools:text="Время" />

        <Button
            android:id="@+id/button_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="07:30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/days_of_week"
            tools:text="Дни недели" />

        <Button
            android:id="@+id/button_days_of_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_choice"
            tools:text="Не выбрано" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            tools:text="Звук сигнала" />

        <Button
            android:id="@+id/button_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_choice"
            tools:text="Не выбрано" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/vibration"
                tools:text="Вибросигнал" />

            <CheckBox
                android:id="@+id/check_box_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_wake_up"
            tools:text="Способ отключения будильника" />

        <Button
            android:id="@+id/button_stop_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_choice"
            tools:text="Как отключить будильник?" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName" />
    </LinearLayout>

</RelativeLayout>